// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout should render Layout OneColumn 1`] = `
<div
  className="tc-layout"
>
  <div
    className="tc-layout-header"
  >
    <h1>
      Header
    </h1>
  </div>
  <div
    className="tc-layout-one-column"
  >
    <div
      className={undefined}
    >
      <div
        style={
          Object {
            "display": "flex",
            "flexDirection": "column",
            "height": "100%",
            "overflow": "auto",
          }
        }
      >
        <h1>
          Column one
        </h1>
      </div>
      <div
        className="react-addons-css-transition-group"
        transitionAppear={true}
        transitionAppearTimeout={230}
        transitionEnterTimeout={230}
        transitionLeaveTimeout={230}
        transitionName="tc-with-drawer-wrapper"
      />
    </div>
  </div>
</div>
`;

exports[`Layout should render Layout TwoColumns 1`] = `
<div
  className="tc-layout"
>
  <div
    className="tc-layout-header"
  >
    <h1>
      Header
    </h1>
  </div>
  <div
    className="tc-layout-two-columns"
  >
    <div
      className="tc-layout-two-columns-left"
    >
      <h1>
        Column one
      </h1>
    </div>
    <div
      className="tc-layout-two-columns-main"
    >
      <div
        className={undefined}
      >
        <div
          style={
            Object {
              "display": "flex",
              "flexDirection": "column",
              "height": "100%",
              "overflow": "auto",
            }
          }
        >
          <h1>
            Column two
          </h1>
        </div>
        <div
          className="react-addons-css-transition-group"
          transitionAppear={true}
          transitionAppearTimeout={230}
          transitionEnterTimeout={230}
          transitionLeaveTimeout={230}
          transitionName="tc-with-drawer-wrapper"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Layout should render layout with Drawer component 1`] = `
<div
  className="tc-layout"
>
  <div
    className="tc-layout-header"
  >
    <h1>
      Header
    </h1>
  </div>
  <div
    className="tc-layout-two-columns"
  >
    <div
      className="tc-layout-two-columns-left"
    >
      <h1>
        Column one
      </h1>
    </div>
    <div
      className="tc-layout-two-columns-main"
    >
      <div
        className={undefined}
      >
        <div
          style={
            Object {
              "display": "flex",
              "flexDirection": "column",
              "height": "100%",
              "overflow": "auto",
            }
          }
        >
          <h1>
            Column two
          </h1>
        </div>
        <div
          className="react-addons-css-transition-group"
          transitionAppear={true}
          transitionAppearTimeout={230}
          transitionEnterTimeout={230}
          transitionLeaveTimeout={230}
          transitionName="tc-with-drawer-wrapper"
        >
          <div
            className="tc-with-drawer-wrapper"
          >
            <div
              style={
                Object {
                  "width": 500,
                }
              }
            >
              <h1>
                Hello drawers
              </h1>
              <p>
                You should not being able to read this because I'm first
              </p>
            </div>
          </div>
          <div
            className="tc-with-drawer-wrapper"
          >
            <div
              style={
                Object {
                  "width": 400,
                }
              }
            >
              <h1>
                Hello drawers
              </h1>
              <p>
                The content dictate the width
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Layout should render layout with footer component 1`] = `
<div
  className="tc-layout"
>
  <div
    className="tc-layout-header"
  >
    <h1>
      Header
    </h1>
  </div>
  <div
    className="tc-layout-one-column"
  >
    <div
      className={undefined}
    >
      <div
        style={
          Object {
            "display": "flex",
            "flexDirection": "column",
            "height": "100%",
            "overflow": "auto",
          }
        }
      >
        <h1>
          Column one
        </h1>
      </div>
      <div
        className="react-addons-css-transition-group"
        transitionAppear={true}
        transitionAppearTimeout={230}
        transitionEnterTimeout={230}
        transitionLeaveTimeout={230}
        transitionName="tc-with-drawer-wrapper"
      />
    </div>
  </div>
  <footer
    className="tc-layout-footer"
    role="contentinfo"
  >
    <h3>
      Footer
    </h3>
  </footer>
</div>
`;

exports[`Layout should render layout without header 1`] = `
<div
  className="tc-layout"
>
  <div
    className="tc-layout-one-column"
  >
    <div
      className={undefined}
    >
      <div
        style={
          Object {
            "display": "flex",
            "flexDirection": "column",
            "height": "100%",
            "overflow": "auto",
          }
        }
      >
        <h1>
          Column one
        </h1>
      </div>
      <div
        className="react-addons-css-transition-group"
        transitionAppear={true}
        transitionAppearTimeout={230}
        transitionEnterTimeout={230}
        transitionLeaveTimeout={230}
        transitionName="tc-with-drawer-wrapper"
      />
    </div>
  </div>
</div>
`;
